@@ -1,3 +1,15 @@
+2017-03-08  Brent Fulgham  <bfulgham@apple.com>
+
+        [Mac][WK2] Whitelist a local cache needed by CFNetwork
+        https://bugs.webkit.org/show_bug.cgi?id=169388
+        <rdar://problem/30224000>
+
+        Reviewed by Alex Christensen.
+
+        Whitelist access to a local cache needed by CFNetwork.
+
+        * WebProcess/com.apple.WebProcess.sb.in:
+
 2017-03-08  Anders Carlsson  <andersca@apple.com>
 
         Simplify the PaymentCoordinator interface
